@@ -55,14 +55,8 @@
 #include <stdint.h>
 
 #ifdef WIN32
-# include "../win32/libgig_private.h" // like config.h, automatically generated by Dev-C++
 # include <windows.h>
   typedef unsigned int   uint;
-  typedef unsigned char  uint8_t;
-  typedef unsigned short uint16_t;
-  typedef unsigned int   uint32_t;
-# define PACKAGE "libgig"
-# define VERSION VER_STRING // VER_STRING defined in libgig_private.h
 #endif // WIN32
 
 #include <stdio.h>
